# distributed-verification

./: .gitignore  Cargo.toml  README.md  download-artifact.sh  rust-toolchain.toml
.cargo/: config.toml
.github/: index.html  install-kani.sh
.github/workflows/: doc.yml  install-kani.yml  test.yml
src/: kani_list.rs  lib.rs  logger.rs  main.rs  statistics.rs
src/cli/: mod.rs
src/functions/: cache.rs  call_graph.rs  callees.rs  mod.rs  serialization.rs  utils.rs  visit_expr.rs  visitor.rs
src/stat/: mod.rs
tests/: compare.rs  kani_list.rs  proofs.rs  simplify_json.rs  snapshots.rs  standard_proof.rs  standard_proof_simple.rs  standard_proofs_with_contracts.rs  utils.rs
tests/compare/: contract1.rs  contract2.rs  gen_proofs_by_nested_macros1.rs  gen_proofs_by_nested_macros2.rs  proof1.rs  proof2.rs
tests/dummy-crate/: Cargo.toml  run.sh  rustflags.json
tests/kani_list/: ad_hoc.txt  gen_contracts_by_macros.txt  gen_proofs_by_macros.txt  gen_proofs_by_nested_macros.txt  proofs_for_contract.txt  standard_proofs.txt  standard_proofs_with_contracts.txt
tests/proofs/: ad_hoc.rs  gen_by_macros.rs  gen_contracts_by_macros.rs  gen_proofs_by_nested_macros.rs  proofs_for_contract.rs  standard_proofs.rs  standard_proofs_with_contracts.rs
tests/simplified/: ad_hoc.json  gen_contracts_by_macros.json  gen_proofs_by_macros.json  gen_proofs_by_nested_macros.json  proofs_for_contract.json  standard_proofs.json  standard_proofs_with_contracts.json
tests/snapshots/: ad_hoc.json  contract1.json  contract2.json  gen_by_macros.json  gen_contracts_by_macros.json  (+10 more)
(+9 files in other folders)
