[package]
name = "distributed-verification"
version = "0.1.0"
edition = "2024"

[dependencies]
# error handling
eyre = "0.6"
color-eyre = "0.6"

# logger
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-error = "0.2"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[package.metadata.rust-analyzer]
rustc_private = true
